--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ceh.demo</groupId>
-  <artifactId>address-book</artifactId>
+  <artifactId>javaee-address-book</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
